--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "secret-robot"
 version = "0.1.0"
 authors = ["Ken Hodler"]
 edition = "2018"
+repository = "https://github.com/endowl/secret-robot.git"
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
